# CSC8503

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CSC8503.sln  Readme.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Assets/Data/: TestGrid1.txt
CSC8503/: CMakeCache.txt  CSC8503.vcxproj  CSC8503.vcxproj.filters  EnemyObject.cpp  EnemyObject.h  Main.cpp  MenuStates.cpp  MenuStates.h  StateGameObject.cpp  TutorialGame.cpp  TutorialGame.h  cmake_install.cmake  playerObject.cpp  playerObject.h
CSC8503/CSC8503.dir/Debug/: CSC8503.exe.recipe  std.compat.ixx.ifc.d.json  std.compat.ixx.ifc.dt.module.json.command  std.compat.ixx.module.json  std.ixx.ifc.dt.module.json.command  std.ixx.module.json
CSC8503/CSC8503.dir/Debug/CSC8503.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CSC8503/CSC8503.dir/Release/: CSC8503.exe.recipe  CSC8503.ipdb  std.compat.ixx.ifc.d.json  std.compat.ixx.ifc.dt.module.json.command  std.compat.ixx.module.json  std.ixx.ifc.dt.module.json.command  std.ixx.module.json
CSC8503/CSC8503.dir/Release/CSC8503.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CSC8503/CSC8503.dir/Release/CSC8503_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
CSC8503CoreClasses/: CSC8503CoreClasses.vcxproj  CSC8503CoreClasses.vcxproj.filters  CollisionDetection.cpp  CollisionDetection.h  GameClient.cpp  GameObject.cpp  GameObject.h  GameServer.cpp  GameServer.h  NavigationGrid.cpp  NavigationGrid.h  NetworkBase.cpp  NetworkBase.h  NetworkObject.cpp  NetworkObject.h  PhysicsSystem.cpp  PhysicsSystem.h  PositionConstraint.cpp  PositionConstraint.h  PushdownMachine.cpp  PushdownMachine.h  PushdownState.h  QuadTree.h  Ray.h  StateMachine.h  cmake_install.cmake
CSC8503CoreClasses/CSC8503CoreClasses.dir/Debug/: CSC8503CoreClasses.lib.recipe  std.compat.ixx.ifc.dt.module.json.command  std.compat.ixx.module.json  std.ixx.ifc.dt.module.json.command  std.ixx.module.json
CSC8503CoreClasses/CSC8503CoreClasses.dir/Debug/CSC8503C.2A588107.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CSC8503CoreClasses.lastbuildstate  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
CSC8503CoreClasses/CSC8503CoreClasses.dir/Debug/CSC8503C.81A2F0D8.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CSC8503CoreClasses.lastbuildstate  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
CSC8503CoreClasses/CSC8503CoreClasses.dir/Debug/CSC8503C.81A2F0D8_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
CSC8503CoreClasses/CSC8503CoreClasses.dir/Release/: CSC8503CoreClasses.lib.recipe
CSC8503CoreClasses/CSC8503CoreClasses.dir/Release/CSC8503C.81A2F0D8.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CSC8503CoreClasses.lastbuildstate  Cl.items.tlog  (+4 more)
NCLCoreClasses/: Keyboard.h  Vector.h
NCLCoreClasses/NCLCoreClasses.dir/Debug/: std.compat.ixx.ifc.dt.module.json.command  std.compat.ixx.module.json  std.ixx.ifc.dt.module.json.command  std.ixx.module.json
OpenGLRendering/: OpenGLRendering.vcxproj  OpenGLRendering.vcxproj.filters  cmake_install.cmake
OpenGLRendering/Debug/: OpenGLRendering.lib
rm规则/: rule.txt
tests/: test.cpp
x64/Client/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Serve/ZERO_CHECK/: ZERO_CHECK.recipe
(+17 files in other folders)
